# rfch_ntp

./: Cargo.toml  DESIGN.md  DESIGN_NOTES.md  LICENSE  README.md
.github/workflows/: ci.yml
examples/: default_config.rs
src/: lib.rs
src/core/: error.rs  mod.rs  serde.rs  types.rs
src/network/: connection.rs  discovery.rs  mod.rs
src/protocol/: codec.rs  message.rs  mod.rs  state.rs
src/sync/: frequency.rs  manager.rs  mod.rs  optimizer.rs  sync_manager.rs
src/time/: gps.rs  mod.rs  ptp.rs  quantum.rs  source.rs
src/util/: mod.rs
