[package]
name = "rfch_ntp"
version = "0.1.0"
edition = "2021"
authors = ["Matt"]
description = "Recursive Frequency Composition Heartbeat Network Timing Protocol"
license = "MIT"

[dependencies]
# Core functionality
tokio = { version = "1.0", features = ["full"] } # Async runtime
futures = "0.3"                                  # Async utilities
bytes = "1.0"                                    # Byte manipulation utilities

# Network and protocol
tokio-util = { version = "0.7", features = ["codec"] } # Network codec utilities
socket2 = "0.5"                                        # Socket configuration
trust-dns-resolver = "0.22"                           # DNS resolution

# Math and signal processing
rustfft = "6.1"                                 # Fast Fourier Transform
num-complex = "0.4"                             # Complex number support
nalgebra = "0.32"                               # Linear algebra
rand = "0.8"                                    # Random number generation

# Error handling and utilities
thiserror = "1.0"                               # Error handling
tracing = "0.1"                                 # Logging and tracing
tracing-subscriber = "0.3"                      # Logging setup
serde = { version = "1.0", features = ["derive"] } # Serialization
bincode = "1.3"                                # Binary serialization

[dev-dependencies]
tokio-test = "0.4"                              # Async testing utilities
criterion = "0.4"                               # Benchmarking
serde_json = "1.0"                              # JSON serialization for testing
